@@ -5,6 +5,7 @@ Version 3.1.1
     - Feature: [import] Optimization of the order recovery system
     - Feature: [import] Setting up a cache for synchronizing catalogs ids
     - Feature: [action] Refactoring and optimization of actions on orders
+    - Bugfix: [import] Updating Mondial Relay data in the specific plugin table
 
 =============================================================
 Version 3.1.0
